--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,5 +31,7 @@ jobs:
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: dev-gcp
-          RESOURCE: .nais/dev.yaml
+          RESOURCE: .nais/nais.yaml
+          VARS: .nais/dev.yaml
           VAR: image=${{ steps.docker-build-push.outputs.image }}
+
