--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,8 +21,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: temurin
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          cache-read-only: false
+
       - name: Test
         run: ./gradlew test
+
       - name: Upload test report
         if: failure()
         uses: actions/upload-artifact@v4
