--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,11 +25,7 @@ jobs:
         with:
           java-version: 21
           distribution: temurin
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          cache-read-only: false
+          cache: gradle
 
       - name: Test
         run: ./gradlew test
